<resources>
    <string name="app_name">SW_USER</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email..</string>
    <string name="password">Password..</string>
    <string name="submit">Submit</string>
    <string name="welcome">Welcome,</string>
    <string name="reserve_a_spot">Reserve a spot</string>
    <string name="transaction_history">Transaction History</string>
    <string name="log_out">Log Out</string>
    <string name="already_registered">Already registered?</string>
    <string name="not_registered">Not registered?</string>
    <string name="your_email_address"><![CDATA[<Your Email Address>]]></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_not_verified">Email not verified!</string>
    <string name="verify_now">Verify Now</string>
    <string name="title_activity_form">Form</string>
    <string name="select">Select</string>
    <string name="plate_number">Plate number..</string>
    <string name="exit">Exit</string>
    <string name="help">Help?</string>
    <string name="price">Price: 0€</string>
    <string name="title_activity_transactions">Transactions</string>
    <string name="select_dates">Select Date</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="plate_number_table">Plate Number</string>
    <string name="date_reserved">Booked Date</string>
    <string name="price_table">Price (€)</string>
    <string name="completed_on">Finalized On</string>
</resources>